--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "0.1"
+version: "0.2"
 services:
   host:
     build:
@@ -7,3 +7,8 @@ services:
     volumes:
       - .:/code
     tty: true
+    ports:
+      - "80:80"
+      - "443:443"
+      - "7045-7049:7045-7049"
+      - "8080:8080"
