--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "bormanjo,marsh5",
   "license": "ISC",
   "devDependencies": {
+    "@openzeppelin/test-helpers": "0.5.15",
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "chai": "^4.3.6",
@@ -17,7 +18,7 @@
     "hardhat": "^2.8.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "3.4.2",
     "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.11"
   }
 }
